<?xml version="1.0"?>
<package>
  <name>laser_test</name>
  <version>0.1.0</version>
  <description>The laser_test package.</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="jgomez@robotnik.es">Jose Gómez Gadea</maintainer>

  <license>BSD</license>


  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/robotnik_torso_control</url> -->

  <author email="jgomez@robotnik.es">Jose Gómez Gadea</author>



  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>imus_test_msgs</build_depend>
  <build_depend>dynamixel_controllers</build_depend>



  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>dynamixel_controllers</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>

  </export>
</package>
